# old-meili

./: .gitignore  Cargo.toml  build.py  build.rs  readme.md  release.py
res/: icon.xcf
src/: config.rs  global.rs  gui.rs  main.rs  meili.toml  usage.txt  util.rs
src/gui/: cli.rs  linux.rs  macos.rs  mod.rs  osx.rs  win.rs
src/net/: mod.rs
