[package]
name = "meili"
version = "0.1.0"
authors = ["Jeffrey McAteer <jeffrey.p.mcateer@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]

app_dirs = "1.2"
hostname = "0.3"

serde = { version = "1.0", features = ["derive"] }
toml = "0.5"


systray = { git = "https://github.com/Jeffrey-P-McAteer/systray-rs.git", branch = "master" }


[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[build-dependencies]
winres = "0.1"

[package.metadata.winres]
OriginalFilename = "meili.exe"
LegalCopyright = "Copyright © 2020 Jeffrey McAteer <jeffrey.p.mcateer@gmail.com>"


